--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,21 @@ button {
   margin-bottom: 30px;
 }
 
+/* responsive card */
+@media only screen and (min-width: 700px){
+  #histories {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px
+  }
+} 
+@media screen and (max-width: 700px) {
+  .box-container {
+    padding: 0 20px;
+    width: 100%;
+  }
+}
+
 #modal-background {
   background: rgb(255, 255, 255);
   background: linear-gradient(
